# postgres-seed

./: .pylintrc  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yaml  pyproject.toml
src/: main.py
src/api/: router.py
src/api/routes/: config_files_route.py  database_route.py  raw_data_route.py  seed_db_route.py  utils.py
src/core/: config.py
src/data_processing/: csv_helper.py  data_frame_helper.py  data_preprocessor.py  errors.py
src/db/: errors.py
src/db/repositories/: data_inserter.py  data_loader.py  repository.py  table_creator.py  table_dropper.py
src/db/schemas/: base_config_schema.py  schemas.py
src/db/schemas/config_schemas/: instrument_config_schema.py  instrument_metadata_schema.py  roll_config_schema.py  spread_cost_schema.py
src/db/schemas/raw_data_schemas/: adjusted_prices_schema.py  fx_prices_schema.py  multiple_prices_schema.py  roll_calendars_schema.py
src/forecast/: raw_forecast_service.py
src/handlers/: config_data_handler.py  database_handler.py  errors.py  raw_data_handler.py  seed_db_handler.py
src/scripts/: create_databases.sql
tests/: conftest.py
tests/test_repositories/: test_data_loader.py  test_transactions.py
tests/test_routes/: test_transactions.py
tests/test_schemas/: test_transactions.py
tests/unit/: test_data_frame_helper.py
